--- a/css/app.css
+++ b/css/app.css
@@ -10147,6 +10147,16 @@ input[type=checkbox].switch:checked:after {
   padding-top: 4rem !important;
 }
 
+.mt-6 {
+  padding-top: 4rem !important;
+}
+
+@media (max-width: 576px) {
+  .pr-sm-2 {
+    padding-right: 2rem;
+  }
+}
+
 .bb-1s {
   border-bottom: 1px solid #f3edfb;
 }
@@ -10279,6 +10289,11 @@ input[type=checkbox].switch:checked:after {
   box-shadow: none;
 }
 
+.bold {
+  font-family: Rubik, sans-serif;
+  font-weight: 500;
+}
+
 .ui-page {
   height: 100%;
 }
@@ -10368,6 +10383,56 @@ label {
   padding: 0 1.5625rem;
   border-radius: 10px;
   text-align: center;
+}
+
+.l_radio {
+  display: inline-block;
+}
+
+.l_radio input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  margin: 0.625rem 0 0 0.4375rem;
+}
+
+.l_radio__text {
+  position: relative;
+  padding-left: 3.5625rem;
+  cursor: pointer;
+  font-size: 1.125rem;
+  color: #1f2022;
+  font-weight: 500;
+}
+
+.l_radio__text:before {
+  content: "";
+  position: absolute;
+  top: -11px;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #BD90E4;
+  border-radius: 50%;
+  background: #FFF;
+}
+
+.l_radio__text:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 11px;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: #BD90E4;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.l_radio input:checked + .l_radio__text:after {
+  opacity: 1;
 }
 
 .navbar-collapse {
@@ -10890,6 +10955,274 @@ button:focus {
 
 .navbar-toggler {
   border: 1px solid #fff;
+}
+
+.navbar-collapse {
+  transition: all 1s ease-in-out;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.l-navbar--toggler {
+  cursor: pointer;
+  z-index: 100;
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+.navbar-toggler {
+  z-index: 30;
+}
+
+@media (max-width: 991px) {
+  .navbar .collapse {
+    position: fixed;
+    width: 100%;
+    z-index: 20;
+    background: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+    top: 0;
+    display: flex;
+    height: 100%;
+    left: 0;
+    margin-top: 3.5rem;
+    opacity: 1;
+    visibility: visible;
+  }
+  .navbar .collapse .l_header--menu {
+    margin: auto;
+    align-items: center;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .l-navbar--toggler {
+    display: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .navbar .collapse:not(.show) {
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  color: #212529;
+  text-decoration: none;
+  background-color: #f8f9fa;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav .dropdown-menu {
+    position: absolute;
+    background-color: transparent;
+  }
+  .navbar-nav .dropdown-menu .dropdown-item {
+    color: #fff;
+  }
+  .navbar-nav .dropdown-menu .dropdown-item:hover, .navbar-nav .dropdown-menu .dropdown-item:focus {
+    color: #16181b;
+    background-color: #f8f9fa;
+  }
+}
+
+.l_site-header {
+  overflow: hidden;
+  position: relative;
+  height: 100vh;
+}
+@media (max-width: 991px) {
+  .l_site-header .l_header--navbar {
+    border-bottom: 1px solid #E5E9EF;
+    width: 100vw;
+    background-color: white;
+    padding: 0.5rem 1rem !important;
+    top: 0;
+    z-index: 1030;
+    left: 0;
+    position: fixed;
+  }
+}
+.l_site-header .l_header--navbar .navbar-brand {
+  z-index: 100;
+}
+.l_site-header .l_header--navbar .l_header--menu {
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+}
+.l_site-header .l_header--navbar .l_header--menu .l_lang .nav-link {
+  display: inline-flex;
+  background-color: #FFF;
+  padding-right: 0.9375rem !important;
+  padding-left: 0.9375rem !important;
+}
+.l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--ru {
+  color: #FFF !important;
+  background-color: #E475AC;
+}
+@media (max-width: 991px) {
+  .l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--ru {
+    color: #000;
+  }
+}
+.l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--ru:hover {
+  color: #cccccc !important;
+}
+@media (max-width: 991px) {
+  .l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--ru:hover {
+    color: #cccccc !important;
+  }
+}
+.l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--en {
+  color: #E475AC !important;
+  background-color: #FFF;
+}
+.l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--en:hover {
+  color: #cb2879 !important;
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
+  padding-right: 2.0625rem;
+  padding-left: 2.0625rem;
+  letter-spacing: 3px;
+  color: #FFF;
+  font-size: 1.32rem;
+  text-transform: uppercase;
+}
+@media (max-width: 1400px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 991px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
+    padding: 1rem 1rem;
+  }
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link:hover {
+  color: #cccccc;
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+  }
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
+  background-color: #ff3c88;
+  width: 165px;
+  height: 47px;
+  text-transform: none;
+  border-radius: 10px;
+}
+@media (max-width: 1400px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
+    width: 165px;
+    height: 44px;
+  }
+}
+@media (max-width: 1199px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
+    width: 135px;
+    height: 41px;
+  }
+}
+@media (max-width: 991px) {
+  .l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
+    width: 165px;
+    height: 63px;
+  }
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button:hover {
+  color: #FFF;
+  background-color: #cd2868;
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button:focus {
+  color: #FFF;
+  background-color: #b01e56;
+}
+.l_site-header .masthead {
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  height: 83%;
+  width: 100%;
+}
+@media (max-width: 576px) {
+  .l_site-header .masthead {
+    height: 100%;
+  }
+}
+@media (min-width: 992px) {
+  .l_site-header .masthead {
+    min-height: 0;
+    width: 40.5rem;
+    padding-bottom: 0;
+  }
+}
+.l_site-header .masthead .masthead-content {
+  padding-top: 4rem;
+}
+@media (max-width: 576px) {
+  .l_site-header .masthead .masthead-content {
+    padding-top: 2rem;
+  }
+}
+.l_site-header .masthead .masthead-content h1 {
+  font-size: 3.55rem;
+  font-family: Rubik, sans-serif;
+  font-weight: 400;
+}
+@media (max-height: 900px) {
+  .l_site-header .masthead .masthead-content h1 {
+    font-size: 3.125rem;
+  }
+}
+@media (max-height: 768px) {
+  .l_site-header .masthead .masthead-content h1 {
+    font-size: 2.9375rem;
+  }
+}
+@media (max-width: 541px) {
+  .l_site-header .masthead .masthead-content h1 {
+    font-size: 2.5rem;
+  }
+}
+.l_site-header .masthead .masthead-content .sub_text {
+  color: #c3c1c1;
+  font-size: 1.12rem;
+  max-width: 400px;
+}
+@media (max-width: 541px) {
+  .l_site-header .masthead .masthead-content .sub_text {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-header .masthead .masthead-content .sub_text {
+    max-width: 100%;
+  }
+}
+
+.l_site-header {
+  overflow: hidden;
+  position: relative;
+  height: initial;
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .nav-link {
+  color: #1f2022;
+}
+.l_site-header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
+  color: #fff;
+}
+.l_site-header .l_header--navbar .l_header--menu .l_lang .l_current_lang--en {
+  background-color: #EBEBEB;
 }
 
 .l_header {
@@ -11892,11 +12225,24 @@ button:focus {
   -webkit-transform: rotate(-42deg);
           transform: rotate(-42deg);
 }
-.treatment .l_site-main .table thead th, .treatment .l_site-main .table-bordered th, .treatment .l_site-main .table-bordered thead td {
-  min-width: 275px;
+.treatment .l_site-main .table {
+  background-color: white;
 }
 .treatment .l_site-main .table thead {
   background-color: transparent;
+}
+.treatment .l_site-main .table thead th {
+  min-width: 275px;
+}
+@media (max-width: 1023px) {
+  .treatment .l_site-main .table thead th {
+    min-width: 0;
+  }
+}
+@media (max-width: 576px) {
+  .treatment .l_site-main .table thead th {
+    min-width: 230px;
+  }
 }
 .treatment .l_site-main .table th {
   color: #1f2022;
@@ -11904,15 +12250,15 @@ button:focus {
   font-weight: 400;
   font-family: Rubik, sans-serif;
 }
+.treatment .l_site-main .table td .date {
+  display: block;
+}
 .treatment .l_site-main .table tbody td {
   color: #1f2022;
   font-size: 1.125rem;
   font-family: Rubik, sans-serif;
   font-weight: 400;
   padding: 2.0625rem 0.75rem;
-}
-.treatment .l_site-main .table td .date {
-  display: block;
 }
 .l_site-main .l_treatment-body input, .l_site-main .l_treatment-body textarea, .l_site-main .l_treatment-body label {
   font-family: Montserrat, sans-serif;
@@ -11929,6 +12275,216 @@ button:focus {
   .l_site-main .l_treatment-body button[type=submit] {
     width: 100%;
   }
+}
+@media (max-width: 1700px) {
+  .faq .l_site-main {
+    overflow-x: hidden;
+  }
+}
+@media (max-width: 991px) {
+  .faq .l_site-main .pt-6 {
+    padding-top: 0 !important;
+  }
+}
+.l_site-main .l_faq-container .accordion {
+  margin-bottom: 2.375rem;
+}
+.l_site-main .l_faq-container .accordion .card {
+  border: none;
+}
+.l_site-main .l_faq-container .accordion .card .card-header {
+  padding: 0.95rem 1.25rem;
+  border-bottom: 2px solid #6913cc;
+  background-color: #fff;
+}
+.l_site-main .l_faq-container .accordion .card .card-header h2 {
+  font-size: 1.125rem;
+  font-family: Rubik, sans-serif;
+  color: #1F2022;
+  font-weight: 400;
+}
+.l_site-main .l_faq-container .accordion .card .card-header h2 .rules_desc {
+  position: relative;
+  border-bottom: 3px solid #6244c9;
+  float: right;
+  height: 3px;
+  width: 20px;
+  cursor: pointer;
+  margin-top: 0.55rem;
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-container .accordion .card .card-header h2 .rules_desc {
+    margin-top: 0;
+    right: -30px;
+  }
+}
+.l_site-main .l_faq-container .accordion .card .card-header .rules_desc.collapsed::before {
+  content: "";
+  width: 20px;
+  height: 3px;
+  background-color: #6244c9;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  position: absolute;
+}
+.l_site-main .l_faq-container .accordion .card .card-body {
+  background-color: #fff;
+  line-height: 1.66;
+}
+.l_site-main .l_faq-title {
+  font-size: 3rem;
+  font-weight: 500;
+  font-family: Rubik, sans-serif;
+}
+@media (max-width: 1600px) {
+  .l_site-main .l_faq-title {
+    font-size: 2.8rem;
+  }
+}
+@media (max-width: 991px) {
+  .l_site-main .l_faq-title {
+    margin: 1rem 0;
+    font-size: 2.2rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-title {
+    font-size: 2rem;
+  }
+}
+.l_site-main .l_faq-masthead {
+  position: relative;
+  height: 840px;
+  margin-bottom: 40px;
+}
+@media (max-width: 991px) {
+  .l_site-main .l_faq-masthead {
+    height: 510px;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-masthead {
+    height: 430px;
+  }
+}
+.l_site-main .l_faq-masthead .l_faq-masthead-illustration {
+  bottom: 0;
+  right: -205px;
+  z-index: -1;
+  width: 1060px;
+  height: 800px;
+  position: absolute;
+  background: url(../images/faq_illustration.svg) no-repeat;
+  background-size: contain;
+}
+@media (max-width: 991px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead-illustration {
+    bottom: 0;
+    right: 15%;
+    width: 509px;
+    height: 390px;
+    background-size: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead-illustration {
+    right: 5%;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead-illustration {
+    width: 100%;
+    height: 317px;
+    bottom: -5%;
+    right: 0;
+  }
+}
+.l_site-main .l_faq-masthead .l_faq-masthead_content {
+  padding-top: 200px;
+  max-width: 600px;
+  font-family: Rubik, sans-serif;
+}
+@media (max-width: 1199px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content {
+    max-width: 440px;
+  }
+}
+@media (max-width: 991px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content {
+    margin: auto;
+    text-align: center;
+    padding-top: 0;
+    margin-bottom: 0.5rem !important;
+  }
+}
+.l_site-main .l_faq-masthead .l_faq-masthead_content h1 {
+  font-weight: 400;
+  font-size: 3.625rem;
+  line-height: 1.1;
+}
+@media (max-width: 1199px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content h1 {
+    font-size: 2.625rem;
+  }
+}
+@media (max-width: 991px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content h1 {
+    margin-bottom: 0.5rem !important;
+    font-size: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content h1 {
+    font-size: 1.8rem;
+  }
+}
+.l_site-main .l_faq-masthead .l_faq-masthead_content .sub_text {
+  color: #c3c1c1;
+  font-size: 1.12rem;
+  max-width: 400px;
+}
+@media (max-width: 991px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content .sub_text {
+    margin: 0 auto !important;
+    text-align: center;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-masthead .l_faq-masthead_content .sub_text {
+    font-size: 1rem;
+  }
+}
+.l_site-main .l_faq-feedback {
+  background: url(../images/faq_question.svg) no-repeat;
+  background-position-x: 80%;
+  background-size: cover;
+  font-family: Rubik, sans-serif;
+  padding: 65px 0;
+}
+.l_site-main .l_faq-feedback .l_faq-feedback_container {
+  max-width: 570px;
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-feedback .l_faq-feedback_container {
+    padding: 0 1rem;
+  }
+}
+.l_site-main .l_faq-feedback .l_faq-feedback_container .l_faq-feedback_title h3 {
+  color: #fff;
+  font-size: 2.25rem;
+}
+@media (max-width: 1024px) {
+  .l_site-main .l_faq-feedback .l_faq-feedback_container .l_faq-feedback_title h3 {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_faq-feedback .l_faq-feedback_container .l_faq-feedback_title h3 {
+    font-size: 1.5rem;
+  }
+}
+.l_site-main .l_faq-feedback .l_faq-feedback_container .btn-inline-custom, .l_site-main .l_faq-feedback .l_faq-feedback_container .btn-inline-custom2, .l_site-main .l_faq-feedback .l_faq-feedback_container .btn-inline-custom3, .l_site-main .l_faq-feedback .l_faq-feedback_container .btn-inline-custom4, .l_site-main .l_faq-feedback .l_faq-feedback_container .btn-inline-custom5 {
+  font-size: 1.5rem;
 }
 .l_site-main .l_desc-templates-title {
   margin-bottom: 3.125rem;
@@ -12206,6 +12762,31 @@ button:focus {
 }
 @media (max-width: 1024px) {
   .add_account .l_site-main {
+    background: none;
+    height: auto;
+  }
+}
+.treatment .l_site-main {
+  background-image: url(../images/element.png);
+  background-repeat: no-repeat;
+  background-position: 66vw calc(100% + 205px);
+  background-size: 18%;
+  height: 100%;
+}
+@media (max-width: 1700px) {
+  .treatment .l_site-main {
+    background-position: 72vw calc(100% + 130px);
+    background-size: 18%;
+  }
+}
+@media (max-width: 1300px) {
+  .treatment .l_site-main {
+    background-position: 77vw calc(100% + 130px);
+    background-size: 22%;
+  }
+}
+@media (max-width: 1024px) {
+  .treatment .l_site-main {
     background: none;
     height: auto;
   }
@@ -12773,6 +13354,83 @@ button:focus {
   color: #FFF;
   font-weight: 500;
   background-color: #6C42CE;
+}
+
+.tariff_popup {
+  margin-top: 35vh;
+}
+.tariff_popup .modal-dialog {
+  max-width: 630px;
+}
+.tariff_popup .modal-dialog .modal-content {
+  border-radius: 10px;
+}
+.tariff_popup .modal-dialog .modal-header {
+  display: block;
+  position: relative;
+  padding: 1rem 1rem 0;
+  border: none;
+  text-transform: uppercase;
+  background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+  background-position: 136% 56%;
+}
+@media (max-width: 576px) {
+  .tariff_popup .modal-dialog .modal-header {
+    background: #FFF;
+  }
+}
+.tariff_popup .modal-dialog .modal-header .modal-title {
+  padding-left: 1rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.525rem;
+}
+.tariff_popup .modal-dialog .modal-header .modal-sub_title {
+  display: inline-block;
+  padding-left: 1rem;
+  max-width: 370px;
+  font-size: 13px;
+  color: #D0CECE;
+  text-transform: initial;
+}
+.tariff_popup .modal-dialog .modal-header h5 {
+  font-weight: 700;
+}
+.tariff_popup .modal-dialog .modal-header button.close {
+  position: absolute;
+  right: 1.5rem;
+  top: 1rem;
+  opacity: 1;
+  font-size: 2rem;
+  color: white;
+}
+@media (max-width: 576px) {
+  .tariff_popup .modal-dialog .modal-header button.close {
+    color: #777;
+  }
+}
+.tariff_popup .modal-dialog .modal-body {
+  padding: 1rem 2rem;
+  color: #C7C3C3;
+}
+@media (max-width: 576px) {
+  .tariff_popup .modal-dialog .modal-body {
+    padding: 1rem;
+  }
+}
+.tariff_popup .modal-dialog .modal-body .price {
+  display: inline-block;
+  float: right;
+  color: #1f2022;
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+.tariff_popup .modal-dialog .modal-body .price .price-period {
+  font-size: 0.875rem;
+  color: #adadad;
+}
+.tariff_popup .modal-dialog .modal-body .price .price-sale {
+  font-size: 0.875rem;
+  color: #00B605;
 }
 
 #sub_popup.modal {
