--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -146,8 +146,23 @@ button:focus {
 .navbar-toggler {
   border: 1px solid #fff;
 }
+// SITE HEADER
+@import "spa-sections/header";
+.l_site-header {
+  overflow: hidden;
+  position: relative;
+  height: initial;
 
-
+  .l_header--navbar .l_header--menu .nav-item .nav-link {
+    color: #1f2022;
+  }
+  .l_header--navbar .l_header--menu .nav-item .l_auth__button {
+    color: #fff;
+  }
+  .l_header--navbar .l_header--menu .l_lang .l_current_lang--en {
+    background-color: #EBEBEB;
+  }
+}
 // HEADER
 .l_header {
   position: relative;
@@ -198,6 +213,7 @@ button:focus {
   @import "spa-sections/tariff";
   @import "report/report";
   @import "treatment/treatment";
+  @import "faq/faq";
   @import "description_templates/description_templates";
   @media (max-width: 991px) {
     margin-top: 3.5rem;
@@ -375,6 +391,26 @@ button:focus {
     @media (max-width: 1300px) {
       background-position: 78vw calc(100% + 130px);
       background-size: 25%;
+    }
+    @media (max-width: 1024px) {
+      background: none;
+      height: auto;
+    }
+  }
+
+  .treatment & {
+    background-image: url(../images/element.png);
+    background-repeat: no-repeat;
+    background-position: 66vw calc(100% + 205px);
+    background-size: 18%;
+    height: 100%;
+    @media (max-width: 1700px) {
+      background-position: 72vw calc(100% + 130px);
+      background-size: 18%;
+    }
+    @media (max-width: 1300px) {
+      background-position: 77vw calc(100% + 130px);
+      background-size: 22%;
     }
     @media (max-width: 1024px) {
       background: none;
@@ -1042,6 +1078,79 @@ button:focus {
             font-weight: 500;
             background-color: $footer_tc;
           }
+        }
+      }
+    }
+  }
+}
+
+.tariff_popup{
+  margin-top: 35vh;
+  .modal-dialog {
+    max-width: 630px;
+    .modal-content{
+      border-radius: 10px;
+    }
+    .modal-header {
+      display: block;
+      position: relative;
+      padding: 1rem 1rem 0;
+      border: none;
+      text-transform: uppercase;
+      background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+      background-position: 136% 56%;
+      @media (max-width: 576px) {
+        background: #FFF;
+      }
+      .modal-title {
+        padding-left: 1rem;
+        margin-bottom: .5rem;
+        font-size: 1.525rem;
+      }
+      .modal-sub_title{
+        display: inline-block;
+        padding-left: 1rem;
+        max-width: 370px;
+        font-size: 13px;
+        color: #D0CECE;
+        text-transform: initial;
+      }
+      h5 {
+        font-weight: 700;
+      }
+
+      button.close {
+        position: absolute;
+        right: 1.5rem;
+        top: 1rem;
+        opacity: 1;
+        font-size: 2rem;
+        color: white;
+        @media (max-width: 576px) {
+          color: #777;
+        }
+      }
+    }
+
+    .modal-body {
+      padding: 1rem 2rem;
+      color: #C7C3C3;
+      @media (max-width: 576px) {
+        padding: 1rem;
+      }
+      .price{
+        display: inline-block;
+        float: right;
+        color: #1f2022;
+        font-weight: 700;
+        font-size: 1.3rem;
+        .price-period{
+          font-size: 0.875rem;
+          color: #adadad;
+        }
+        .price-sale{
+          font-size: 0.875rem;
+          color: #00B605;
         }
       }
     }
