--- a/src/scss/spa-sections/tariff.scss
+++ b/src/scss/spa-sections/tariff.scss
@@ -91,6 +91,7 @@
         }
       }
       .card-body {
+        padding: 1.375rem 0.6875rem;
         .card-title {
           color: #BD90E4;
           margin-top: 1.5625rem;
@@ -116,8 +117,8 @@
 
         .card-list {
           list-style: none;
-          padding-left: 0.9375rem;
-          font-size: 0.8125rem;
+          font-size: 0.875rem;
+          padding-left: 1.25rem;
           line-height: 1.5rem;
 
           li {
@@ -126,7 +127,7 @@
               border-radius: 50%;
               background-color: #BD90E4;
               position: absolute;
-              left: 17px;
+              left: 13px;
               width: 10px;
               margin-top: 0.3125rem;
               height: 11px;
