--- a/src/scss/edit_account/edit_account.scss
+++ b/src/scss/edit_account/edit_account.scss
@@ -1,6 +1,9 @@
 @import "../variables";
 
 .edit_account & {
+  .btn-inline-custom4 {
+    font-size: 1rem;
+  }
   .l_site-content-title {
     margin-bottom: 2.1875rem;
     .nav-link {
