--- a/src/scss/create_publications/create_publications.scss
+++ b/src/scss/create_publications/create_publications.scss
@@ -1,148 +1,167 @@
 @import "../variables";
 @import "util";
 
-.l_site-new_post {
+.create_publication & {
+  .btn-inline-custom4 {
+    font-family: Montserrat, sans-serif;
+    font-size: 0.875rem;
+  }
+  .account_select {
+    @extend %container;
 
-}
-
-.account_select {
-  @extend %container;
-  .account_select-label {
-    @extend %title;
-    @media (max-width: 1024px) {
-      text-align: center;
+    .account_select-label {
+      @extend %title;
+      @media (max-width: 1024px) {
+        text-align: center;
+      }
     }
   }
-}
 
-.template_select {
-  margin-bottom: 1.5625rem;
-  .template_select-label {
-    @extend %title;
-    @media (max-width: 1024px) {
-      text-align: center;
-    }
-  }
-  .ddcommon .ddTitle .description, .dd .ddChild li .description,.ddcommon .ddTitle .ddlabel, .dd .ddChild li .ddlabel {
-    color: #999999;
-    font-size: 1rem;
-    display: inline-flex;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 300px;
-    cursor: pointer;
-    @media (max-width: 576px) {
-      display: block;
-    }
-  }
-  .ddcommon .ddTitle .description {
-    @media (max-width: 576px) {
-      max-width: 200px;
-    }
-  }
-  .ddcommon .ddTitle .ddTitleText .ddlabel, .dd .ddChild li .ddlabel {
-    display: inline-flex;
-    font-size: 1rem;
-    font-weight: 500;
-    color: #2c2d2e;
-    margin-right: 1.25rem;
-    @media (max-width: 576px) {
-      display: block;
-    }
-  }
-  .ddcommon .ddTitle .description, .dd .ddChild li{
-    margin-left: 1.875rem;
-  }
-  .dd .ddChild li .description, .ddcommon .ddTitle .description {
-    @media (max-width: 576px) {
-       margin-left: 0;
-    }
-  }
-}
+  .template_select {
+    margin-bottom: 1.5625rem;
 
-.upload_file {
-  margin-bottom: 1.5625rem;
-  .qq-gallery .qq-upload-button {
-    width: 100%;
-    height: 83%;
-    position: absolute;
-    background: transparent;
-    border: transparent;
-    box-shadow: none;
+    .template_select-label {
+      @extend %title;
+      @media (max-width: 1024px) {
+        text-align: center;
+      }
+    }
+
+    .ddcommon .ddTitle .description, .dd .ddChild li .description, .ddcommon .ddTitle .ddlabel, .dd .ddChild li .ddlabel {
+      color: #999999;
+      font-size: 1rem;
+      display: inline-flex;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 300px;
+      cursor: pointer;
+      @media (max-width: 576px) {
+        display: block;
+      }
+    }
+
+    .ddcommon .ddTitle .description {
+      @media (max-width: 576px) {
+        max-width: 200px;
+      }
+    }
+
+    .ddcommon .ddTitle .ddTitleText .ddlabel, .dd .ddChild li .ddlabel {
+      display: inline-flex;
+      font-size: 1rem;
+      font-weight: 500;
+      color: #2c2d2e;
+      margin-right: 1.25rem;
+      @media (max-width: 576px) {
+        display: block;
+      }
+    }
+
+    .ddcommon .ddTitle .description, .dd .ddChild li {
+      margin-left: 1.875rem;
+    }
+
+    .dd .ddChild li .description, .ddcommon .ddTitle .description {
+      @media (max-width: 576px) {
+        margin-left: 0;
+      }
+    }
   }
 
-  .qq-gallery .qq-upload-button {
-    position: absolute !important;
-    right: 0;
-    top: 0;
-    font-size: 0;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-    opacity: 0;
-    height: 100%;
-  }
-  .qq-gallery.qq-uploader:before{
-    content: "Drop files here";
-  }
-  .qq-gallery .qq-upload-list li {
-    margin: 0 1.5625rem 1.5625rem 0.0625rem;
-  }
+  .upload_file {
+    margin-bottom: 1.5625rem;
 
-  .qq-gallery.qq-uploader {
-    border: 1px solid rgb(243, 237, 251);
-    background-color: rgb(255, 253, 253);
-  }
-}
-
-.post_description{
-  margin-bottom: 1.5625rem;
-  .post_description-title {
-    @extend %title;
-    @media (max-width: 1024px) {
-      text-align: center;
-    }
-  }
-  textarea{
-    @extend %textarea;
-    border-bottom-left-radius: 0px !important;
-    border-bottom-right-radius: 0px !important;
-  }
-  .post_description-decorator{
-    position: relative;
-    &::before{
-      content: "";
-      height: 30px;
-      bottom: -5px;
-      border: 1px solid #f3edfb;
-      background-color: #fffdfd;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
+    .qq-gallery .qq-upload-button {
       width: 100%;
+      height: 83%;
       position: absolute;
+      background: transparent;
+      border: transparent;
+      box-shadow: none;
+    }
+
+    .qq-gallery .qq-upload-button {
+      position: absolute !important;
+      right: 0;
+      top: 0;
+      font-size: 0;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+      opacity: 0;
+      height: 100%;
+    }
+
+    .qq-gallery.qq-uploader:before {
+      content: "Drop files here";
+    }
+
+    .qq-gallery .qq-upload-list li {
+      margin: 0 1.5625rem 1.5625rem 0.0625rem;
+    }
+
+    .qq-gallery.qq-uploader {
+      border: 1px solid rgb(243, 237, 251);
+      background-color: rgb(255, 253, 253);
     }
   }
-  #count_message{
-    color: #999999;
-    font-size: 1rem;
-    z-index: 10;
-    position: relative;
-    left: 10px;
-    top: 3px;
-  }
-}
 
+  .post_description {
+    margin-bottom: 1.5625rem;
 
-.post_comment{
-  margin-bottom: 1.5625rem;
-  .post_comment-title {
-    @extend %title;
-    @media (max-width: 1024px) {
-      text-align: center;
+    .post_description-title {
+      @extend %title;
+      @media (max-width: 1024px) {
+        text-align: center;
+      }
+    }
+
+    textarea {
+      @extend %textarea;
+      border-bottom-left-radius: 0px !important;
+      border-bottom-right-radius: 0px !important;
+    }
+
+    .post_description-decorator {
+      position: relative;
+
+      &::before {
+        content: "";
+        height: 30px;
+        bottom: -5px;
+        border: 1px solid #f3edfb;
+        background-color: #fffdfd;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        width: 100%;
+        position: absolute;
+      }
+    }
+
+    #count_message {
+      color: #999999;
+      font-size: 1rem;
+      z-index: 10;
+      position: relative;
+      left: 10px;
+      top: 3px;
     }
   }
-  textarea{
-    @extend %textarea;
+
+
+  .post_comment {
+    margin-bottom: 1.5625rem;
+
+    .post_comment-title {
+      @extend %title;
+      @media (max-width: 1024px) {
+        text-align: center;
+      }
+    }
+
+    textarea {
+      @extend %textarea;
+    }
   }
 }
