--- a/src/scss/new_tariff/new_tariff.scss
+++ b/src/scss/new_tariff/new_tariff.scss
@@ -1,27 +1,32 @@
 @import "../variables";
 
-.new_tariff &  .l_tariff {
-  padding-top: 1rem;
-  background-color: #fff;
-  margin-bottom: 9.375rem;
-}
-
-.l_new_tariff-title {
-  font-size: 3rem;
-  font-weight: 500;
-  margin-bottom: 1.5625rem;
-  font-family: Rubik, sans-serif;
-  @media (max-width: 1600px){
-    font-size: 2.8rem;
+.new_tariff & {
+  .btn-custom-lg{
+    padding: 1rem 9rem;
   }
-  @media (max-width: 800px){
-    margin-top: 1rem;
+  .l_tariff {
+    padding-top: 1rem;
+    background-color: #fff;
+    margin-bottom: 9.375rem;
+  }
+
+  .l_new_tariff-title {
+    font-size: 3rem;
+    font-weight: 500;
     margin-bottom: 1rem;
-  }
-  @media (max-width: 576px){
-    font-size: 2.2rem;
+    font-family: Rubik, sans-serif;
+    @media (max-width: 1600px) {
+      font-size: 2.8rem;
+      margin-bottom: 0;
+    }
+    @media (max-width: 800px) {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+    @media (max-width: 576px) {
+      font-size: 2.2rem;
+    }
   }
 }
-
 
 
